front - fix flex on IE11

--- a/front/src/dashboard/DashboardMenu.scss
+++ b/front/src/dashboard/DashboardMenu.scss
@@ -1,6 +1,6 @@
 .dashboard-menu.side-menu {
   background-color: #ebeff3;
-  flex: initial;
+  flex: 0 1 auto;
   padding: 0 20px 10px 0;
 
   .company-title {
